# AXEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  build.sh  main.cpp  project.axproject  tree.txt
assets/: Man1_Cinema.glb  Scene1.glb  teapot.glb
assets/audio/: BattleTheme.axsound  README_AXSOUND.txt  SwordHit.axsound  UI_Click.axsound
assets/combat/attacks/: HighTime.axattack  KickAttack3.axattack  PunchAttack1.axattack  PunchAttack2.axattack  SpinSlam.axattack  Stinger.axattack  SwordAttack1.axattack  SwordAttack2.axattack  SwordAttack3.axattack
assets/combat/examples/: SwordTrailExample.axcombo
assets/combat/reactions/: BasicHumanoid.axreaction
assets/combat/sets/: FPS_Knife.axcombatset  Player_Sword.axcombatset  Player_Unarmed.axcombatset
assets/component_presets/: AXDefaultComponents.axcomponents.json
assets/enemies/: Gunner.axenemy
assets/gameplay/events/: Default.axevents
assets/gameplay/examples/: CoinRicochetMechanic.axexample
assets/gameplay/save/: Default.axsaveprofile
assets/gameplay/voxel/: AbandonedOutpost.axstructure
assets/input/: Default.axinput
assets/materials/: BLOOM_Blade.axmat  Default_Realistic.axmat  Slash_Additive.axmat
assets/models/: Holy_Sword.mtl
assets/renderprofiles/: Cartoon.axrender  Realistic.axrender  StylizedAction.axrender.json
assets/scenes/: Empty.axscene  Scene1.axscene
assets/shaders/: skinned.frag  skinned.vert  stylized_lit.frag  stylized_lit.vert  vfx_mesh.frag  vfx_mesh.vert
assets/ui/: HUD.axui
assets/vfx/: HitSpark_Mesh.axvfx  Slash_WideArc.axvfx  Slash_WideArc_Mesh.axvfx
assets/vfx/meshes/: README_BLENDER_MESH_VFX.txt
cmake/: SyncRuntimeAssets.cmake
editor/: AXEditor.cpp  EditorApp.cpp  EditorApp.h  EditorState.h
editor/codegen/: CppGenerator.cpp  CppGenerator.h  JsonProjectIO.cpp  JsonProjectIO.h
editor/panels/: AIEditorPanel.cpp  AIEditorPanel.h  AnimationTimelinePanel.cpp  AnimationTimelinePanel.h  AssetPreviewPanel.cpp  AssetPreviewPanel.h  AssetRegistryPanel.cpp  AssetRegistryPanel.h  AttackColliderPanel.cpp  AttackColliderPanel.h  AudioPreviewPanel.cpp  AudioPreviewPanel.h  CommandLauncherPanel.cpp  CommandLauncherPanel.h  ConsolePanel.cpp  ConsolePanel.h  DebugProfilerPanel.cpp  DebugProfilerPanel.h  EditorPanelUtil.h  GameUIPanel.cpp  GameUIPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InputMapPanel.cpp  InputMapPanel.h  InspectorPanel.cpp  InspectorPanel.h  PanelLayout.h  ProjectBrowserPanel.cpp  ProjectBrowserPanel.h  RenderMaterialPanel.cpp  RenderMaterialPanel.h  SceneViewPanel.cpp  SceneViewPanel.h  VFXEditorPanel.cpp  VFXEditorPanel.h
editor/preview/: EditorPreviewRenderer.cpp  EditorPreviewRenderer.h
editor/scene/: AXSceneIO.cpp  AXSceneIO.h
game/: main.cpp
include/: AXEngine.h  Game.h  GameObject.h
include/AXEngine/: AXAIKit.h  AXActionKit.h  AXAudioKit.h  AXCharacterKit.h  AXCombatKit.h  AXCore.h  AXDebugKit.h  AXEngine.h  AXRendering.h  AXSoundKit.h  AXUIRuntime.h  AXVFXKit.h  AXVoxelKit.h  Core.h
include/AXEngine/AI/: AIKit.h
include/AXEngine/Audio/: AudioKit.h  SoundKit.h
include/AXEngine/Character/: CharacterKit.h  CollisionQueries.h
include/AXEngine/Combat/: ActionKit.h  BlockState.h  CombatRuntime.h  CombatTypes.h  Combatant.h  DamagePacket.h  HitReaction.h  Hitbox.h  Hurtbox.h
include/AXEngine/Components/: ActorComponent.h
include/AXEngine/Debug/: DebugKit.h
include/AXEngine/GameFramework/: Actor.h  PlayerController.h
include/AXEngine/Gameplay/: Events.h
include/AXEngine/Input/: InputAction.h  SDLInputBridge.h
include/AXEngine/Rendering/: RenderProfile.h
include/AXEngine/UI/: UIRuntime.h
include/AXEngine/VFX/: VFXKit.h
include/AXEngine/Voxel/: VoxelKit.h
include/OGL3D/: RenderSettings.h  RenderStyle.h  ShaderLibrary.h  ShaderProgram.h  Texture2D.h  UIRenderer.h  render.h
include/assets/: AssetManager.h  AssetSystem.hpp  GltfAsset.h  GltfLoader.h  Mesh.hpp  MeshAsset.h  SkinnedMeshAsset.h  StaticSceneAsset.h  StaticSceneLoader.h
include/core/: App.hpp  GameEntry.hpp
include/ecs/: AnimationSystem.h  AnimatorComponent.h  ColliderComponent.h  Component.h  Components.hpp  Entity.h  EntityBuilder.hpp  RenderComponent.h  Scene.h  SkinnedRenderComponent.h  StaticSceneRenderComponent.h  Systems.hpp  TransformComponent.h
include/render/: BgfxHelpers.hpp  Renderer.hpp
include/runtime/: AXAttackColliderSystem.h  AXComponentModel.h  AXEngineSystems.h  AXGameplayPrimitives.h  AXGameplayRuntime.h  AXLODSystem.h  AXProceduralAnimation.h  AXProject.h  AXSceneRuntime.h  AXVoxelRuntime.h
include/window/: window.h
scripts/: Action.cpp  CombatHits.cpp  CombatVfx.cpp  EnemyAI.cpp  Environment.cpp  Environment.h  Game.cpp  GameplayRuntimeGlue.cpp  Math.cpp  MyGame.cpp  Player.cpp  Player.h  Seq.cpp  Sub.cpp
scripts/backbone/: AXActionCombatBackboneRuntime.cpp  AXActionPlayerStartupRuntime.cpp  AXAssetDrivenCombatBackboneRuntime.cpp  AXCharacterBackboneRuntime.cpp  AXEnemyBackboneRuntime.cpp  ActionPlayerBackbone.h
scripts/examples/: FPSKnifeMeleeController.cpp  MinimalActionPlayerController.cpp  ModularActionPlayerController.cpp
shaders/src/: fs_mesh.sc  varying.def.sc  vs_mesh.sc
src/: Game.cpp  GameObject.cpp
src/OGL3D/: RenderStyle.cpp  ShaderLibrary.cpp  ShaderProgram.cpp  Texture2D.cpp  UIRenderer.cpp  render.cpp
src/assets/: AssetManager.cpp  AssetSystem.cpp  GltfLoader.cpp  Mesh.cpp  StaticSceneLoader.cpp
src/core/: App.cpp  Time.cpp
src/ecs/: AnimationSystem.cpp  ColliderComponent.cpp  Components.cpp  Scene.cpp  Systems.cpp
src/render/: BgfxHelpers.cpp  Renderer.cpp
src/runtime/: AXAttackColliderSystem.cpp  AXBlenderMeshVFXRuntime.cpp  AXCharacterKitRuntime.cpp  AXCombatRuntime.cpp  AXComponentModel.cpp  AXDefaultGame.cpp  AXEngineSystems.cpp  AXGameplayPrimitives.cpp  AXGameplayRuntime.cpp  AXLODSystem.cpp  AXProceduralAnimation.cpp  AXProject.cpp  AXSceneRuntime.cpp  AXSoundRuntime.cpp  AXVoxelRuntime.cpp
src/runtime/input/: AXSDLInputBridge.cpp
src/window/: window.cpp
templates/EmptyProject/: project.axproject
tests/: AssetParserSmoke.cpp  CoreTypeSmoke.cpp
tools/: validate_assets.py
(+1 files in other folders)
